--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- 1. Điều hướng về trang chủ -->
     <a href="/">Trang chủ</a>
     <!-- 2. Điều hướng đến contact.html -->
-    <a href="more-info/contact.html">contract </a>
+    <a href="./more-info/contact.html">contract </a>
     <!-- 3. Điều hướng đến my-skill.html -->
-    <a href="more-info/my-skill.html">my-skill</a>
+    <a href="./more-info/my-skill.html">my-skill</a>
     <h1>Welcome to My Website!</h1>
     <hr />
     <h2>Nguyễn Trần Như Nhộng</h2>
